# third_party_cangjie_compiler

./: .clang-format  .gitignore  CMakeLists.txt  OAT.xml  Open_Source_Software_Notice.docx  README.OpenSource  README.md  README_OpenHarmony.md  README_zh.md  build.py  bundle.json
src/AST/: ASTContext.cpp  ASTTypeValidator.cpp  CMakeLists.txt  Cache.cpp  Clone.cpp  Comment.cpp  Create.cpp  Identifier.cpp  IntLiteral.cpp  Node.cpp  PrintNode.cpp  Query.cpp  QueryParser.h  RecoverDesugar.cpp  ScopeManagerApi.cpp  Searcher.cpp  Types.cpp  Utils.cpp  Walker.cpp
src/Basic/: CMakeLists.txt  DiagnosticEmitter.cpp  DiagnosticEmitterImpl.h  DiagnosticEngine.cpp  DiagnosticEngineImpl.cpp  DiagnosticEngineImpl.h  DiagnosticJsonFormatter.cpp  Display.cpp  Position.cpp  Print.cpp  SourceManager.cpp  StringConvertor.cpp  Utils.cpp  Version.cpp
src/CodeGen/: CGContext.cpp  CGContext.h  CGContextImpl.cpp  CGContextImpl.h  CGFunction.cpp  CGModule.cpp  CGModule.h  CGPkgContext.cpp  CGPkgContext.h  CMakeLists.txt  DIBuilder.cpp  DIBuilder.h  EmitBasicBlockIR.cpp  EmitBasicBlockIR.h  EmitExpressionIR.cpp  EmitExpressionIR.h  EmitFunctionIR.cpp  EmitFunctionIR.h  EmitGlobalVariableIR.cpp  EmitGlobalVariableIR.h  EmitPackageIR.cpp  EraseUselessIRs.cpp  IRAttribute.h  IRBuilder.cpp  IRBuilder.h  IRGenerator.h
src/CodeGen/Base/: AllocateImpl.cpp  AllocateImpl.h  ApplyImpl.cpp  ApplyImpl.h  ArithmeticOpImpl.cpp  ArithmeticOpImpl.h  ArrayImpl.cpp  ArrayImpl.h  CHIRExprWrapper.h  InstanceOfExprImpl.cpp  InstanceOfImpl.h  IntrinsicsDispatcher.cpp  IntrinsicsDispatcher.h  InvokeImpl.cpp  InvokeImpl.h  LogicalOpImpl.cpp  LogicalOpImpl.h  OverflowDispatcher.cpp  OverflowDispatcher.h  SpawnExprImpl.cpp  SpawnExprImpl.h  TupleExprImpl.cpp  TupleExprImpl.h  TypeCastImpl.cpp  TypeCastImpl.h  VArrayExprImpl.cpp  VArrayExprImpl.h
src/CodeGen/CJNative/: CGCFFI.h  CGTypeInfo.cpp  CGTypeInfo.h  CHIRSplitter.cpp  CHIRSplitter.h  IROptimizer.h  (+15 more)
src/ConditionalCompilation/: CMakeLists.txt  ConditionalCompilation.cpp  ConditionalCompilationImpl.h
src/Driver/: CMakeLists.txt  Driver.cpp  DriverOptions.cpp  Job.cpp  Job.h  TargetCPUs.inc  TempFileManager.cpp  Tool.cpp  ToolFuture.cpp  ToolOptions.cpp  Utils.cpp
src/Frontend/: CMakeLists.txt  CompileStrategy.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendOptions.cpp  MergeAnnoFromCjd.cpp  MergeAnnoFromCjd.h  PrintSymbolTable.cpp  PrintSymbolTable.h
src/FrontendTool/: CMakeLists.txt  DefaultCompilerInstance.cpp  FrontendTool.cpp  IncrementalCompilerInstance.cpp
src/IncrementalCompilation/: ASTCacheCalculator.cpp  ASTDiff.cpp  ASTDiff.h  CMakeLists.txt  CachedDataSerialization.cpp  CompilationCacheSerialization.h  DependencySerialization.cpp  IncrementalScopeAnalysis.cpp  PollutionAnalyzer.cpp  PollutionAnalyzer.h  PollutionMapGen.h  Utils.cpp
src/Lex/: CMakeLists.txt  Lexer.cpp  LexerDiag.cpp  LexerImpl.cpp  LexerImpl.h
src/MetaTransformation/: CMakeLists.txt  MetaTransformPluginBuilder.cpp  MetaTransformPluginManager.cpp
src/Modules/: CMakeLists.txt  CjoManager.cpp  CjoManagerImpl.h  DependencyGraph.cpp  ImportManager.cpp  ModulesDiag.cpp  ModulesDiag.h  ModulesUtils.cpp  PackageManager.cpp
src/Option/: CMakeLists.txt  Option.cpp  OptionAction.cpp  OptionTable.cpp
src/Parse/: ASTChecker.cpp  ASTHasher.cpp  AttachComment.cpp  CMakeLists.txt  MPParserImpl.h  ParseAnnotations.cpp  ParseAtom.cpp  ParseCJMPDecl.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseFeatures.cpp  ParseImports.cpp  ParseMacro.cpp  ParseModifiers.cpp  ParsePattern.cpp  ParseQuote.cpp  ParseType.cpp  Parser.cpp  ParserDiag.cpp  ParserImpl.cpp  ParserImpl.h  ParserModifierRules.cpp  ParserUtils.cpp
src/Sema/: Assumption.cpp  BuiltInOperatorUtil.cpp  BuiltInOperatorUtil.h  CMakeLists.txt  CalcConstExpr.cpp  CheckAPILevel.cpp  CheckAPILevel.h  CheckFuncInline.cpp  CheckFunctionLinkage.cpp  CheckTypeCompatible.cpp  CheckUnusedImportImpl.cpp  Collector.cpp  Collector.h  ConstEvaluationChecker.cpp  DeclAttributeChecker.cpp  DefaultImplementHandler.cpp  DiagSuppressor.cpp  DiagSuppressor.h  Diags.cpp  Diags.h  EliminateRecursiveTypes.cpp  EnumSugarChecker.cpp  EnumSugarChecker.h  EnumSugarTargetsFinder.cpp  EnumSugarTargetsFinder.h  ExtendBoxMarker.cpp  ExtendBoxMarker.h  ExtraScopes.cpp  ExtraScopes.h  IncrementalUtils.cpp  JoinAndMeet.cpp  JoinAndMeet.h  LocalTypeArgumentSynthesis.cpp  LocalTypeArgumentSynthesis.h  LookUpImpl.cpp  MultiTypeSubstUtils.cpp  PatternUsefulness.cpp  PatternUsefulness.h  PluginCheck.cpp  PluginCheck.h  (+29 more)
unittests/AST/: ASTToSourceTest.cpp  CMakeLists.txt  CloneTest.cpp  CreateTest.cpp  SearchPlusTest.cpp  SearchTest.cpp  WalkerTest.cpp
unittests/Basic/: CMakeLists.txt  EngineTest.cpp  ErrorMessageTest.cpp  SourceManagerTest.cpp  StringConvertorTest.cpp  UtilsTest.cpp
unittests/CHIR/: CHIRDeSerialzierTest.cpp  CHIRSerialzierTest.cpp  CMakeLists.txt
unittests/CodeGen/: CGTest.h  CMakeLists.txt  MangleTypeTest.cpp
unittests/ConditionalCompilation/: CMakeLists.txt  ConditionalCompilationTest.cpp
unittests/Driver/: CMakeLists.txt  DriverOptionTest.cpp  DriverTest.cpp  TempFileManagerTest.cpp  ToolchainTest.cpp
unittests/Frontend/: CMakeLists.txt  CompilerInstanceTest.cpp
unittests/IncrCompile/: CMakeLists.txt  IncrementalCompilationLoggerTest.cpp
unittests/Lex/: CMakeLists.txt  LexerTerminatorTest.cpp  LexerTest.cpp  TotalTest.cpp
unittests/Macro/: CMakeLists.txt  MacroTest.cpp  NodeSerializationTest.cpp  TokenSerializationTest.cpp
unittests/Mangling/: CMakeLists.txt  ManglingTests.cpp
unittests/Modules/: CMakeLists.txt  PackageTest.cpp
unittests/Option/: CMakeLists.txt  OptionTableTest.cpp  OptionTest.cpp  main.cj
unittests/Parse/: CMakeLists.txt  ParseCommentTest.cpp  ParseTypeAliasTest.cpp  ParseTypeTest.cpp  ParserTest.cpp
unittests/Utils/: CMakeLists.txt  CastASTTests.cpp  CastTyTests.cpp  SignalTest.cj  SignalTestCJC.cpp  SignalTests.cpp  TyKind.inc  UtilsTests.cpp
utils/: CMakeLists.txt  entitlement.plist
utils/envsetup/: llvm_darwin.sh  llvm_linux.sh  llvm_windows_x86_64.bat  llvm_windows_x86_64.ps1  llvm_windows_x86_64.sh
(+951 files in other folders)
